--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "jasmine-core": "^2.9.0",
+    "karma": "^2.0.0",
+    "karma-jasmine": "^1.1.1"
   }
 }
